# dotplug

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.txt  format.sh  meson.build  meson_options.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml
include/: apply.hpp  config.hpp  context.hpp  settings.hpp  symlinks.hpp
include/modules/: apply.hpp  backup.hpp  new_config.hpp  validator.hpp
include/utils/: colors.hpp  config.hpp  formatting.hpp  git.hpp  lang.hpp  logging.hpp
lang/: en_US.json
src/: context.cpp  globals.cpp  main.cpp
src/headers/: cli_utils.hpp  config.hpp  format_check.hpp  globals.hpp  install.hpp  list.hpp  remove.hpp  settings.hpp  validator.hpp
src/modules/: apply.cpp  backup.cpp  install.cpp  list.cpp  new_config.cpp  remove.cpp  validator.cpp
src/utils/: cli_utils.cpp  config.cpp  format_check.cpp  formatting.cpp  git.cpp  lang.cpp  logging.cpp  symlinks.cpp
